Reschedule shared CFRunLoopTimer instead of reconstructing it https://bugs.webkit.org/show_bug.cgi?id=109765

Reviewed by Andreas Kling and Anders Carlsson.

Using CFRunLoopTimerSetNextFireDate is over 2x faster than deleting and reconstructing timers.

* platform/mac/SharedTimerMac.mm:
(WebCore):
(WebCore::PowerObserver::restartSharedTimer):
(WebCore::sharedTimer):
(WebCore::setSharedTimerFireInterval):
(WebCore::stopSharedTimer):



Canonical link: https://commits.webkit.org/128045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142825 268f45cc-cd09-0410-ab3c-d52691b4dbfc